--- a/MovieShelf/app/src/main/res/layout/item_movie_shelf.xml
+++ b/MovieShelf/app/src/main/res/layout/item_movie_shelf.xml
@@ -39,7 +39,7 @@
             android:id="@+id/iv_free_crop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_crop_free_white_24dp"
+            android:src="@drawable/ic_crop_free_white_40dp"
             android:layout_alignBottom="@id/iv_movie_image"
             android:layout_alignRight="@id/iv_movie_image"
             android:layout_marginRight="4dp"
@@ -75,61 +75,17 @@
             android:layout_marginTop="8dp"
             android:layout_toRightOf="@id/iv_movie_image"
             android:text="Current Popularity" />
-
-        <LinearLayout
-            android:id="@+id/ll_rating"
+        
+        <android.support.v7.widget.AppCompatRatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/tv_current_popularity"
+            android:numStars="7"
+            android:layout_alignLeft="@id/tv_title"
             android:layout_below="@id/tv_current_popularity"
-            android:layout_toRightOf="@id/tv_current_popularity"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_user_rating_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_28dp" />
-
-            <ImageView
-                android:id="@+id/iv_user_rating_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_28dp" />
-
-            <ImageView
-                android:id="@+id/iv_user_rating_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_28dp" />
-
-            <ImageView
-                android:id="@+id/iv_user_rating_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_28dp" />
-
-            <ImageView
-                android:id="@+id/iv_user_rating_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_28dp" />
-
-            <ImageView
-                android:id="@+id/iv_user_rating_6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_28dp" />
-
-            <ImageView
-                android:id="@+id/iv_user_rating_7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_yellow_16dp"
-                android:layout_marginTop="6dp"
-                />
-
-        </LinearLayout>
+            style="@style/Base.Widget.AppCompat.RatingBar.Small"
+            android:rating="7"
+            android:backgroundTint="@color/colorYellow"
+            />
 
         <Button
             android:layout_width="wrap_content"
