--- a/MovieShelf/app/src/main/res/layout/item_movie_shelf.xml
+++ b/MovieShelf/app/src/main/res/layout/item_movie_shelf.xml
@@ -16,24 +16,30 @@
             android:layout_height="250dp"
             android:src="@drawable/it" />
 
-        <ImageView
-            android:id="@+id/iv_favourite"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_favorite_orange_40dp"
-            android:layout_marginTop="4dp"
-            android:paddingLeft="4dp"
-            />
+            >
 
-        <TextView
-            android:id="@+id/tv_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7.4"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:textColor="@color/colorWhite"
-            />
+            <ImageView
+                android:id="@+id/iv_favourite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingLeft="4dp"
+                android:src="@drawable/ic_favorite_orange_40dp" />
+
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="12dp"
+                android:text="7.4"
+                android:textColor="@color/colorWhite" />
+
+        </FrameLayout>
+
 
         <ImageView
             android:id="@+id/iv_free_crop"
