--- a/MovieShelf/app/src/main/res/layout/activity_movie_details.xml
+++ b/MovieShelf/app/src/main/res/layout/activity_movie_details.xml
@@ -2,7 +2,9 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -12,6 +14,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="256dp"
+            android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll">
 
             <ImageView
@@ -81,7 +84,7 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="20dp" />
 
-                <ScrollView
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/iv_movie_details"
@@ -98,7 +101,7 @@
                         android:text="@string/lbl_overview_details"
                         android:textColor="@color/colorWhite" />
 
-                </ScrollView>
+                </android.support.v4.widget.NestedScrollView>
 
                 <android.support.v7.widget.AppCompatRatingBar
                     android:id="@+id/rating_bar"
@@ -233,7 +236,11 @@
                 android:layout_below="@id/rv_trailer_details"
                 android:layout_marginTop="8dp"
                 android:text="@string/txt_reviews"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                android:lineSpacingMultiplier="1.2"
+                android:layout_marginBottom="16dp"
+                />
 
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
