--- a/MovieShelf/app/src/main/res/layout/activity_movie_details.xml
+++ b/MovieShelf/app/src/main/res/layout/activity_movie_details.xml
@@ -161,70 +161,31 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/tv_drama"
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_genre"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_trailer_title"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/category_rounded"
-                android:padding="8dp"
-                android:text="Drama"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tv_pipe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@id/tv_drama"
-                android:layout_below="@id/tv_trailer_title"
-                android:layout_toRightOf="@id/tv_drama"
-                android:padding="8dp"
-                android:text=" | "
-                android:textColor="@color/colorWhite"
                 />
-
-            <TextView
-                android:id="@+id/tv_crime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@id/tv_drama"
-                android:layout_below="@id/tv_trailer_title"
-                android:layout_toRightOf="@id/tv_pipe"
-                android:background="@drawable/category_rounded"
-                android:padding="8dp"
-                android:text="Crime"
-                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_total_hours"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/tv_drama"
-                android:layout_below="@id/tv_drama"
+                android:layout_marginLeft="16dp"
+                android:layout_below="@id/rv_genre"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/total_hours_rounded"
                 android:padding="8dp"
                 android:text="2 hrs 22 mins"
                 android:textColor="@color/colorWhite" />
 
-            <!--<ImageView-->
-            <!--android:id="@+id/iv_trailer"-->
-            <!--android:layout_width="200dp"-->
-            <!--android:layout_height="180dp"-->
-            <!--android:src="@drawable/it"-->
-            <!--android:scaleType="centerCrop"-->
-            <!--android:layout_below="@id/tv_total_hours"-->
-            <!--android:layout_alignLeft="@id/tv_drama"-->
-            <!--/>-->
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_trailer_details"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:layout_alignLeft="@id/tv_drama"
+                android:layout_alignLeft="@id/tv_total_hours"
                 android:layout_below="@id/tv_total_hours"
-                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
                 android:fitsSystemWindows="true" />
 
@@ -232,7 +193,7 @@
                 android:id="@+id/tv_reviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/tv_drama"
+                android:layout_alignLeft="@id/tv_total_hours"
                 android:layout_below="@id/rv_trailer_details"
                 android:layout_marginTop="8dp"
                 android:text="@string/txt_reviews"
@@ -240,6 +201,13 @@
                 android:textSize="16sp"
                 android:lineSpacingMultiplier="1.2"
                 android:layout_marginBottom="16dp"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_reviews_and_summary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_reviews"
                 />
 
         </RelativeLayout>
